2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* JavaBinding.addin.xml, JavaBinding.mdp, Makefile.am: Reorganized the
	  extension point hierarchy. Embedded all add-in manifests as resources.

2007-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/Resolver.cs, Parser/TypeVisitor.cs: Remove debug code.

2007-05-11  Lluis Sanchez Gual <lluis@novell.com> 

	* JavaBinding.mdp: Copy the .addins.xml file to the output dir.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* JavaBinding.addin.xml: Migration to Mono.Addins.

2007-04-19  Lluis Sanchez Gual <lluis@novell.com> 

	* JavaBinding.mdp: Don't copy referenced assemblies.

2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 

	* JavaBinding.mdp: Set target runtime to 2.0.

2007-02-16  Lluis Sanchez Gual <lluis@novell.com> 

	* JavaBinding.addin.xml: Change add-in versions to 0.13.

2007-02-15  Lluis Sanchez Gual <lluis@novell.com> 

	* JavaBinding.mdp, Makefile.am: Synchronized the MD project and the
	  Makefile

2006-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Parser/SharpDevelopTree/CompilationUnit.cs,
	  Parser/SharpDevelopTree/Indexer.cs,
	  Parser/SharpDevelopTree/Method.cs,
	  Parser/SharpDevelopTree/Parameter.cs,
	  Parser/SharpDevelopTree/Event.cs,
	  Parser/SharpDevelopTree/ReturnType.cs,
	  Parser/SharpDevelopTree/Field.cs,
	  Parser/SharpDevelopTree/Property.cs,
	  Parser/SharpDevelopTree/Class.cs,
	  Parser/SharpDevelopTree/Constructor.cs,
	  Parser/SharpDevelopTree/AttributeSection.cs: Renamed Abstract*
	  classes to Default*.

2006-09-18 Jacob Ilsø Christensen  <jacobilsoe@gmail.com>
	
	* JavaBinding.mdp: Updated.
	* .: Added svn:ignore for JavaBinding.pidb.

2006-07-03 Lluis Sanchez Gual  <lluis@novell.com> 

	* JavaBinding.addin.xml: Updated versions.
	* JavaBindingCompilerServices.cs: Track changes in ProjectReference.

2006-06-15 Lluis Sanchez Gual  <lluis@novell.com>

	* JavaBinding.addin.xml: Use the DataType element instead fof Class
	  to declare serializable types.
